updated RegisterTests to comply with new exitCode/stdout/stderr changes from bug 1119688